--- a/cv/style.css
+++ b/cv/style.css
@@ -144,8 +144,8 @@ li {
 		overflow: hidden;
 }
 .list-set.keywords li {
-		background-color: #444444;
-		color: #eeeeee;
+		background-color: #0F4C81;
+		color: #fff;
 		padding: 0.6em 0.85em;
 		font-size: 1.3em;
 		display: inline-block;
