--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,3 +1,5 @@
-<header-component></header-component>
-<home></home>
-<footer-component></footer-component>
+<div class="appContainer">
+  <header-component></header-component>
+  <router-outlet></router-outlet> 
+  <footer-component></footer-component>
+</div>
