--- a/portfolio/src/app/introduction/introduction.component.html
+++ b/portfolio/src/app/introduction/introduction.component.html
@@ -1,16 +1,18 @@
-<div>
-  <p>Lorem ipsum dolor sit amet, ex tritani tincidunt has, at vix malorum nusquam pertinax. Vix quod liber ei. Ad
-    explicari expetendis percipitur usu, no est ignota perpetua theophrastus, integre quaestio contentiones eum ex. Eam
-    fabellas abhorreant id, duo eu case prima, sit amet sale oportere at.</p>
+<div class="introduction conteneur">
+ <div class="introduction__texte">
+    <p>Lorem ipsum dolor sit amet, ex tritani tincidunt has, at vix malorum nusquam pertinax. Vix quod liber ei. Ad
+      explicari expetendis percipitur usu, no est ignota perpetua theophrastus, integre quaestio contentiones eum ex. Eam
+      fabellas abhorreant id, duo eu case prima, sit amet sale oportere at.</p>
 
-  <p>Ex periculis signiferumque duo. In choro dictas explicari mel, mea exerci verear placerat ei. Quo eu honestatis
-    referrentur. Ei vidit perfecto mea.</p>
-</div>
-<div class="apprentissageEnCours">
-    <h2>Apprentissage en cours</h2>
-    <div class="apprentissageEnCours__logos">
-      <img src="../../assets/angularLogo.png" alt="Logo d'Angular">
-      <img src="../../assets/ionicLogo.png" alt="Logo d'Ionic">
-      <img src="../../assets/nodeExpressLogo.png" alt="Logo de NodeJS & Express">
-    </div>
+    <p>Ex periculis signiferumque duo. In choro dictas explicari mel, mea exerci verear placerat ei. Quo eu honestatis
+      referrentur. Ei vidit perfecto mea.</p>
+  </div>
+  <div class="introduction__apprentissageEnCours">
+      <h2>Apprentissage en cours</h2>
+      <div class="introduction__apprentissageEnCoursLogos">
+        <img src="assets/angular.png" alt="Logo d'Angular">
+        <img src="assets/ionic.png" alt="Logo d'Ionic">
+        <img src="assets/nodeExpress.png" alt="Logo de NodeJS & Express">
+      </div>
+  </div>
 </div>
