--- a/portfolio/src/app/realisation-index/realisation-index.component.html
+++ b/portfolio/src/app/realisation-index/realisation-index.component.html
@@ -1,1 +1,15 @@
-<p>realisation-index works!</p>
+<main class="conteneur realisationIndex">
+  <img [src]=realisationContent.ImagePath [alt]="realisationContent.Title">
+
+  <h2>{{ realisationContent.Title }}</h2>
+  <ng-template *ngIf="realisationContent.SchoolProject; else notSchool">
+    Show this only if "show" is true
+  </ng-template>
+
+  <ng-template #notSchool>
+    <p>
+      Show this only if "show" is not true
+    </p>
+  </ng-template>
+  <p>{{ realisationContent.Text }}</p>
+</main>
