--- a/portfolio/src/app/realisations/realisations.component.html
+++ b/portfolio/src/app/realisations/realisations.component.html
@@ -1,7 +1,16 @@
-<h2>Réalisations passées</h2>
-<ng-container *ngFor="let realisationCard of realisations">
-  <div>
-    <img [src]=realisationCard.ImagePath alt="">
-    <h3>{{ realisationCard.Title }}</h3>
+<div class="realisations conteneur">
+  <h2>Réalisations passées</h2>
+  <div class="realisations__container">
+    <ng-container *ngFor="let realisationCard of realisations">
+      <div routerLink="/realisation" [state]="{realisation: realisationCard.Title}" class="realisations__items">
+        <img [src]=realisationCard.ImagePath [alt]="realisationCard.Title" class="realisations__itemsImg" />
+        <div class="realisations__itemsHover">
+          <h3 class="realisations__itemsHoverTitre">{{ realisationCard.Title }}</h3>
+        </div>
+      </div>
+    </ng-container>
+    <div class="realisations__items realisations__items--last">
+      <h3 class="realisations__items--lastTitre">Vos projets ici?</h3>
+    </div>
   </div>
-</ng-container>
+</div>
