--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,22 @@
 <header class="header conteneur">
-  <h1>Gabriel Chouinard Létourneau <span>/ Développeur Web</span></h1>
-  <a href="https://www.linkedin.com/in/gabriel-chouinard-l%C3%A9tourneau-b35847149/" target="_blank" rel="noreferrer noopener" class="header__links">
+  <div class="header__titresContainer">
+    <h1 class="header__titre">
+      Gabriel Chouinard Létourneau
+      <span class="header__titrePoste">/ Développeur Web</span>
+
+    </h1>
+    <p class="header__titreMask">
+      Gabriel Chouinard Létourneau
+      <span class="header__titrePoste">/ Développeur Web</span>
+    </p>
+  </div>
+  <a href="https://www.linkedin.com/in/gabriel-chouinard-l%C3%A9tourneau-b35847149/" target="_blank"
+    rel="noreferrer noopener" class="header__links">
     <img src="assets/linkedIn.png" alt="LinkedIn's icon" />
   </a>
 
-  <a href="https://github.com/GabrielChouinardLetourneau" target="_blank" rel="noreferrer noopener" class="header__links">
+  <a href="https://github.com/GabrielChouinardLetourneau" target="_blank" rel="noreferrer noopener"
+    class="header__links">
     <img src="assets/gitHub.png" alt="GitHub's icon" />
   </a>
   <!-- IMPLEMENTATION IN THE FUTURE
