--- a/src/app/introduction/introduction.component.html
+++ b/src/app/introduction/introduction.component.html
@@ -1,11 +1,8 @@
 <div class="introduction conteneur">
  <div class="introduction__texte">
-    <p>Lorem ipsum dolor sit amet, ex tritani tincidunt has, at vix malorum nusquam pertinax. Vix quod liber ei. Ad
-      explicari expetendis percipitur usu, no est ignota perpetua theophrastus, integre quaestio contentiones eum ex. Eam
-      fabellas abhorreant id, duo eu case prima, sit amet sale oportere at.</p>
+    <p>Avide de nouvelles technologies, je cherche à me spécialiser en JavaScript, principalement dans les <span class="introduction__texte--i">Frameworks</span> comme Angular, qui est principalement l'une de mes prioritées du moment. Les technologies <span class="introduction__texte--i">Front-End</span> ne sont pas mon seul intérêt. En effet, NodeJS, MangoDB et Django font aussi parties des technologies qui m'intéresse présentement ou à long terme</p>
 
-    <p>Ex periculis signiferumque duo. In choro dictas explicari mel, mea exerci verear placerat ei. Quo eu honestatis
-      referrentur. Ei vidit perfecto mea.</p>
+    <p>Apprendre, comprendre et explorer font parties de se qui alimente mon amour pour le domaine du développement Web et d'applications.</p>
   </div>
   <div class="introduction__apprentissageEnCours">
       <h2>Apprentissage en cours</h2>
