--- a/src/app/more-about-me/more-about-me.component.html
+++ b/src/app/more-about-me/more-about-me.component.html
@@ -4,18 +4,22 @@
     <div class="moreAbout__container">
       <div class="moreAbout__presentation">
         <img src="assets/me.png" alt="Me" />
-        <h3>Compétences</h3>
-        <skills-tabs></skills-tabs>
+        <div class="moreAbout__presentationSkills">
+          <div class="moreAbout__presentationSkillsTitreContainer">
+            <h3 class="moreAbout__presentationSkillsTitre">Compétences</h3>
+            <span class="moreAbout__presentationSkillsTitreLine"></span>
+          </div>
+          <skills-tabs></skills-tabs>
+        </div>
       </div>
       <div class="moreAbout__text">
         <div class="moreAbout__textIntro">
-          <p>Ex periculis signiferumque duo. In choro dictas explicari mel, mea exerci verear placerat ei. Quo eu
-            honestatis
-            referrentur. Ei vidit perfecto mea.</p>
+          <p>Finissant en technique d'intégration multimédia au Cégep Sainte-foy, je cherche à m'améliorer constamment à travers les défis et j'ai l'ambition de grandir de façon exponentielle. Ma passion pour la technologie est ma vocation! </p>
           <p class="moreAbout__textIntroQuote">“A man, though wise, should never be ashamed of learning more, and must
             unbend his
             mind.”
-            <span>― Sophocles, Antigone</span></p>
+            <span class="moreAbout__textIntroQuoteAuthor">― Sophocles, Antigone</span>
+          </p>
         </div>
         <div class="moreAbout__textLists">
           <h3>Ce qui m'alimente</h3>
@@ -31,25 +35,21 @@
               <img src="assets/recycle.svg" alt="Perspective to reuse code" />
             </li>
             <li>
-              <span class="line"></span>
-              Le travail d’équipe
+              <span class="line"></span>Le travail d’équipe
               <img src="assets/discussion.svg" alt="Discussion to help the teamwork" />
             </li>
-            <li><span class="line"></span>Amélioration personnelle<img src="assets/amelioration.svg"
+            <li><span class="line"></span>Amélioration<img src="assets/amelioration.svg"
                 alt="Mental attitude to help improve" /></li>
             <li>
-              <span class="line"></span>
-              Apprendre
+              <span class="line"></span>Apprendre
               <img src="assets/mindBlown.svg" alt="Mind blown by all the learning you can do">
             </li>
             <li>
-              <span class="line"></span>
-              Optimisation
+              <span class="line"></span>Optimisation
               <img src="assets/magnifyingGlass.svg" alt="Magnifying glass to see the weaknesses" />
             </li>
             <li>
-              <span class="line"></span>
-              Sécurité
+              <span class="line"></span>Sécurité
               <img src="assets/shield.svg" alt="Shield to protect against bad intentions" />
             </li>
           </ul>
@@ -58,24 +58,20 @@
           <h3>Intérêts</h3>
           <ul class="moreAbout__textListsItem">
             <li>
-              <span class="line"></span>
-              Escalade
+              <span class="line"></span>Escalade
               <img src="assets/climbing.svg" alt="Climbing walls of obstacles" />
             </li>
             <li>
-              <span class="line"></span>
-              Photographie
+              <span class="line"></span>Photographie
               <img src="assets/photography.svg" alt="Taking pictures to remember better" />
             </li>
             <li><span class="line"></span>Gaming<img src="assets/gaming.svg" alt="Evading myself healthily" /></li>
             <li>
-              <span class="line"></span>
-              Callisthénie
+              <span class="line"></span>Callisthénie
               <img src="assets/training.svg" alt="Making me feel better in my body" />
             </li>
             <li>
-              <span class="line"></span>
-              Boxe
+              <span class="line"></span>Boxe
               <img src="assets/boxing.svg" alt="Learning in the defeats" />
             </li>
           </ul>
