fix error bg title

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header conteneur">
   <div class="header__titresContainer">
-    <h1 class="header__titre">
+    <h1 class="header__titre" style="background-image: url('./assets/bgTitle.png');">
       Gabriel Chouinard Létourneau
       <span class="header__titrePoste">/ Développeur Web</span>
 
