--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,7 @@
 
   &__titre {
     font-size: 35px;
-    background: url('/assets/bgTitle.png') center center;
+    background: center center;
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
