--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,5 @@
-<h2>404, LA PAGE NA PAS ÉTÉ TROUVÉE</h2>
+<div class="notFound__container conteneur">
+  <h2>404, LA PAGE NA PAS ÉTÉ TROUVÉE</h2>
+  <img src="assets/404.png" alt="Not found" />
+
+</div>
