--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -3,7 +3,7 @@
   background-color: #4F6395;
   color: #fff;
   min-height: 310px;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 
@@ -13,7 +13,7 @@
   }
 
   &__secondRow {
-    margin: 50px auto;
+    padding-bottom: 50px;
     &Btn {
       display: inline-block;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
@@ -29,7 +29,11 @@
       &:hover {
         transform: scale(1.1);
       }
+      img {
+        vertical-align: bottom;
+      }
     }
+
   }
 
   &__firstRow, &__secondRow {
