--- a/src/app/realisations/realisations.component.scss
+++ b/src/app/realisations/realisations.component.scss
@@ -21,6 +21,7 @@
     @media screen and (min-width: 601px) {
       width: span(4 of 12);
       &:hover {
+        cursor: pointer;
         img {
           transition: .5s all ease-in-out;
           filter: blur(10px);
