--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,11 +26,13 @@
 html,
 body {
  height: 100%;
- position: relative;
 }
 
 body {
   margin: 0;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 ul {
@@ -48,7 +50,6 @@ ul {
 }
 
 .appContainer {
-  overflow: hidden;
   position: relative;
 }
 
